--- a/teams/engineering.yml
+++ b/teams/engineering.yml
@@ -1,15 +1,14 @@
 # Teams are available in Fleet Premium. 
 
-# This file updates policies, queries, agent options, controls, and software for hosts assigned to the "Workstations (canary)" team.
+# This file updates policies, queries, agent options, controls, and software for hosts assigned to the "Workstations" team.
 
 # To add another team, create a new file in the teams/ directory and copy and paste the contents from this file.
 # Update the secret in the new file, then create the corresponding secret in GitHub Actions secrets. 
 # Then add that secret to .github/workflows/workflow.yml as an env variable.
 # The secret name in the YAML file must match the secret name in GitHub Actions secrets.
 
-name: Workstations (canary)
+name: Engineering
 policies:
-  - path: ../lib/macos-device-health.policies.yml
   - path: ../lib/windows-device-health.policies.yml
   - path: ../lib/linux-device-health.policies.yml
 queries:
@@ -23,5 +22,5 @@ controls:
     - path: ../lib/set-timezone.script.sh
 team_settings:
   secrets:
-    - secret: "$FLEET_WORKSTATIONS_CANARY_ENROLL_SECRET"
+    - secret: "$FLEET_ENGINEERING_ENROLL_SECRET"
 software:
