--- a/default.yml
+++ b/default.yml
@@ -12,8 +12,8 @@ agent_options:
 controls:
 org_settings:
   webhook_settings:
-    activties_webhook:
-      enabled_activities_webhook: true
+    activities_webhook:
+      enable_activities_webhook: true
       destination_url: https://mattstraub.com
   host_expiry_settings: 
     host_expiry_enabled: true
