--- a/teams/engineering.yml
+++ b/teams/engineering.yml
@@ -17,6 +17,12 @@ queries:
 agent_options:
   path: ../lib/agent-options.yml
 controls:
+  macos_updates:
+    deadline: "2025-05-15"
+    minimum_version: "15.4"
+  macos_settings:
+    custom_settings:
+      -path: ../lib/disable-bluetooth-file-sharing.mobileconfig
   scripts:
     - path: ../lib/remove-zoom-artifacts.script.sh
     - path: ../lib/set-timezone.script.sh
