--- a/teams/new-hires.yml
+++ b/teams/new-hires.yml
@@ -11,6 +11,8 @@ name: New Hires
 policies:
   - path: ../lib/windows-device-health.policies.yml
   - path: ../lib/linux-device-health.policies.yml
+  - path: ../lib/dns-resolvers.policies.yml
+  - path: ../lib/all-windows-updates-installed.policies.yml
 queries:
   - path: ../lib/collect-failed-login-attempts.queries.yml
 agent_options:
@@ -18,6 +20,7 @@ agent_options:
 controls:
   scripts:
     - path: ../lib/remove-zoom-artifacts.script.sh
+    - path: ../lib/update-dns.sh
 team_settings:
   secrets:
     - secret: "$FLEET_NEW_HIRES_ENROLL_SECRET"
