--- a/teams/new-hires.yml
+++ b/teams/new-hires.yml
@@ -20,7 +20,10 @@ controls:
   scripts:
     - path: ../lib/remove-zoom-artifacts.script.sh
     - path: ../lib/update-dns.sh
+    - path: ../lib/zoom-config.sh
 team_settings:
   secrets:
     - secret: "$FLEET_NEW_HIRES_ENROLL_SECRET"
 software:
+  packages:
+    - path: ../lib/zoom.yml
