--- a/teams/engineering.yml
+++ b/teams/engineering.yml
@@ -34,3 +34,5 @@ team_settings:
   secrets:
     - secret: "$FLEET_ENGINEERING_ENROLL_SECRET"
 software:
+  packages:
+    - path: ../lib/cloudflare-warp.yml
